--- a/gemini-widget.html
+++ b/gemini-widget.html
@@ -116,7 +116,7 @@ You can ask me about:
 </div>
 
 <script>
-/* const API_KEY = "AIzaSyBO8dVArJ78KnF1GnFrrtDn3lpuHPD9T84"; */
+const API_KEY = "AIzaSyDwlvq9AjfiDkVMILjuEf4K4m-PxLYgVMY";
 const messages = document.getElementById("messages");
 const input = document.getElementById("input");
 
