--- a/project.html
+++ b/project.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>DSA Crate - AlgoCrate</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Redirecting...</title>
+
+  <!-- Redirect after 0 seconds -->
+  <meta http-equiv="refresh" content="0; url=https://6000-firebase-studio-1760196508558.cluster-y3k7ko3fang56qzieg3trwgyfg.cloudworkstations.dev/" />
 </head>
 <body>
-  <div class="container">
-    <h1>Welcome to the Project Crate 💡</h1>
-    <p>Explore and build real-world projects to enhance your portfolio and practical experience.</p>
-    <a class="back-link" href="dashboard.html">← Back to Dashboard</a>
-  </div>
+  <p>Redirecting to AlgoCrate Mock Interview Practice... 🚀</p>
 </body>
 </html>
